2004-08-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.test: Fixed [SF Tcllib Bug 1003671]: Ensured that
	* tree.test:  (de)serialization of empty graph/tree is
	* graph.tcl:  working properly. Thanks to Bhushit Joshipura
	* tree.tcl:   <bhushit@users.sf.net> for the report.

2004-08-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.test: Fixed [SF Tcllib Bug 1000716]: Unset of last
	* tree.test:  attribute followed by delete does not result
	* graph.tcl:  in error anymore. Thanks to Brian Theado
	* tree.tcl:   <btheado@users.sf.net> for both report and fix.

2004-06-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* matrix.tcl (_search): Fixed bug reported by Joachim Kock
	  <kock@math.uqam.ca>, using his fix. Search went into an infinite
	  loop if -nocase was used.
	* matrix.test: Added a testcase.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* matrix.test:    Added clean up commands to prevent tests
	* matrix1.test:   from interfering with each other. Testsuite
	* tree1.test:     is now passing again.

	* graph.man:      Fixed the 'require' declarations in the
	* matrix.man:     documentation to use the correct package
	* pool.man:       names.
	* prioqueue.man:
	* queue.man:
	* record.man:
	* skiplist.man:
	* stack.man:
	* struct_list.man:
	* struct_set.man:
	* struct_tree.man:

	* tree1.man:   Folded the v1 data structures back into the struct
	* tree1.tcl:   directory, as their own packages. Recorded the old
	* tree1.test:  v1 struct as a set of packages now as well. The
	* graph1.man:  unchanged data structures from struct v1 have been
	* graph1.tcl:  removed from the repository. They were duplicates.
	* graph1.test:
	* matrix1.man:
	* matrix1.tcl:
	* matrix1.test:
	* pkgIndex.tcl:
